--- a/TestWebsite/TestWebsite.csproj
+++ b/TestWebsite/TestWebsite.csproj
@@ -15,14 +15,14 @@
     <Folder Include="wwwroot\images\" />
     <Folder Include="Models\" />
     <Folder Include="Services\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Helpers\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Models\" />
     <None Remove="Services\" />
-    <None Remove="Controllers\" />
     <None Remove="Helpers\" />
+    <None Remove="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
